Banner Section Done

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,15 +45,16 @@
 
 
 .banner{
-    max-width: 1250px;
+    max-width: 1200px;
     margin: 0 auto;
     height: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 16px;
-    overflow: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%);
-   background-image: url(../Images/Group\ 13\ \(1\)\ \(1\).png);
+    
+   background-image: url(../Images/Group\ 13\ \(1\)\ \(1\).png), linear-gradient(180deg, rgba(19, 19, 24, 0.80), rgba(19, 19, 24, 0.00) 100%);
+   background-blend-mode: overlay;
    background-repeat: no-repeat;
   
    }
@@ -75,6 +76,7 @@ line-height: 26px;
 text-align: center;
 }
 .input-container{
+    margin-top: 30px;
     display: inline-flex;
 padding: 16px;
 align-items: flex-start;
@@ -118,7 +120,7 @@ border: none;
        .item-container{
         flex-direction: column;
         width: 100%;
-        justify-content: center;
+        align-items: center;
        }
        .input-container{
         flex-direction: column;
@@ -135,3 +137,18 @@ border: none;
             width: 100%;
             justify-content: center;
         }   
+        .input{
+            width: 250px;
+        height: 40px;
+        }
+        .banner-button{
+            width: 250px;
+            height: 40px;
+        }
+
+        nav a{
+            margin-top: 15px;
+        }
+        .banner{
+            margin-top: 30px;
+        }
