--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@
 .banner{
     max-width: 1200px;
     margin: 0 auto;
-    height: 600px;
+    height: 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -98,57 +98,83 @@ font-size: 16px;
 font-weight: 400;
 }
 .banner-button{
+    color: #FFF;
     width: 174px;
 height: 52px;
 flex-shrink: 0;
 border-radius: 8px;
 background: #FF5400;
 border: none;
+text-align: center;
+font-weight: 800;
+font-size: 20px;
 
 }
-.arrow{
-    
+.popular-tours{
+    max-width: 1200px;
+    margin: 0 auto;
+   display: flex;
+   margin-top: 100px;
+
 }
 
-
-
+.popular-headline{
+    color: #131318;
+font-size: 40px;
+font-weight: 800;
+}
+.popular-content{
+    margin: 20px;
+    color: rgba(19, 19, 24, 0.70);
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.popular-tours-content h1{
+    margin-top: 0%;
+}
+.popular-tours-image{
+    margin-left: 50px ;
+}
 @media screen and (max-width:576px) {
     .nav-bar{
         flex-direction: column;
         margin-left: 0px;
        } 
-       .item-container{
+    .item-container{
         flex-direction: column;
         width: 100%;
         align-items: center;
        }
-       .input-container{
+    .input-container{
         flex-direction: column;
        }
-       .banner-heading{
+    .banner-heading{
         font-size: 35px;
         margin-top: 20px;
        }
-       .banner-pg{
+    .banner-pg{
         width: 400px;
        }
-    
-        .nav-container {
+    .nav-container {
             width: 100%;
             justify-content: center;
         }   
-        .input{
+    .input{
             width: 250px;
-        height: 40px;
+            height: 40px;
         }
-        .banner-button{
+    .banner-button{
             width: 250px;
             height: 40px;
         }
 
-        nav a{
+    nav a{
             margin-top: 15px;
         }
-        .banner{
+    .banner{
             margin-top: 30px;
         }
+    }
