--- a/styles/style.css
+++ b/styles/style.css
@@ -113,8 +113,8 @@ font-size: 20px;
 .popular-tours{
     max-width: 1200px;
     margin: 0 auto;
-   display: flex;
    margin-top: 100px;
+   display: flex;
 
 }
 
@@ -126,18 +126,45 @@ font-weight: 800;
 .popular-content{
     margin: 20px;
     color: rgba(19, 19, 24, 0.70);
-font-family: Mulish;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 26px; /* 162.5% */
+
 }
+.popular-tours-content{
+    width: 50%;
+}
+
 .popular-tours-content h1{
     margin-top: 0%;
 }
 .popular-tours-image{
-    margin-left: 50px ;
+    margin-left: 100px ;
+    width: 50%;
 }
+.maldives{
+    background-image: url(../Images/Rectangle\ 5.png);
+    background-repeat: no-repeat;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+font-size: 28px;
+font-weight: 800;
+
+}
+.indonesia{
+    background-image: url(../Images/Rectangle\ 8.png);
+    background-repeat: no-repeat;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+font-size: 28px;
+font-weight: 800;
+}
+
 @media screen and (max-width:576px) {
     .nav-bar{
         flex-direction: column;
@@ -177,15 +204,17 @@ line-height: 26px; /* 162.5% */
     .banner{
             margin-top: 30px;
         }
-    }
+    
     .popular-tours{
         flex-direction: column;
         margin-top: 30px;
     }
     .popular-tours-content{
         margin-left: 20px;
+        width: 100%;
     }
     .popular-tours-image{
         margin-top: 30px;
         margin-left: 0%;
     }
+}
