--- a/styles/style.css
+++ b/styles/style.css
@@ -244,6 +244,76 @@ font-weight: 800;
 font-size: 28px;
 font-weight: 800;
 }
+.section-2{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.section-2 img{
+    margin: 20px 0px 0px 20px;
+    width: 64px;
+}
+.section-2 h1 {
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    text-align: center;
+}
+.section-2 p{
+        color: rgba(19, 19, 24, 0.70);
+        /* margin-left: 280px; */
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        padding-left: 30px;
+        width: 500px;
+       
+    }
+    .section2-pg{
+        margin-left: 280px;
+    }
+.section-container{
+    display: flex ;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+.section-2 h3{
+    padding-left: 30px;
+    color: #131318;
+font-size: 24px;
+font-weight: 800;
+}
+.hotel{
+    width: 573px;
+height: 284px;
+flex-shrink: 0;
+border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+margin-bottom: 0%;
+}
+.service{
+    width: 573px;
+height: 284px;
+flex-shrink: 0;
+border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+}
+.discount{
+    width: 573px;
+height: 284px;
+flex-shrink: 0;
+border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+}
+    
+
+
+
+
+
 @media screen and (max-width:576px) {
     .nav-bar{
         flex-direction: column;
@@ -321,5 +391,27 @@ font-weight: 800;
         margin: 0 auto;
         width: 500px;
         margin-bottom: 48px;
+    }
+    .section-2{
+        width: 573px;
+    }
+    .section2-heading{
+        width: 573px;
+    }
+    .section2-heading p{
+        margin-left: 0%;
+    }
+    .section-container{
+        max-width: 573px;
+        display: block;
+    }
+    .hotel{
+        margin-top: 20px;
+    }
+    .service{
+        margin-top: 20px;
+    }
+    .discount{
+        margin-top: 20px;
     }
 }
