--- a/styles/style.css
+++ b/styles/style.css
@@ -269,7 +269,9 @@ font-weight: 800;
        
     }
     .section2-pg{
-        margin-left: 280px;
+        text-align: center;
+        margin-left: 320px;
+        margin-bottom: 40px;
     }
 .section-container{
     display: flex ;
@@ -299,6 +301,8 @@ flex-shrink: 0;
 border-radius: 16px;
 border: 1px solid rgba(251, 181, 99, 0.20);
 background: rgba(251, 181, 99, 0.05);
+border: 1px solid rgba(41, 206, 246, 0.20);
+background: rgba(41, 206, 246, 0.05);
 }
 .discount{
     width: 573px;
@@ -307,9 +311,31 @@ flex-shrink: 0;
 border-radius: 16px;
 border: 1px solid rgba(251, 181, 99, 0.20);
 background: rgba(251, 181, 99, 0.05);
+border: 1px solid rgba(233, 68, 68, 0.20);
+background: rgba(233, 68, 68, 0.05);
+}
+.section-3{
+    max-width: 1200px;
+    margin: 0 auto;
+    justify-content: center;
 }
     
+.section-3 h3{
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
 
+}
+
+.section-3 p{
+    color: rgba(19, 19, 24, 0.70);
+    width: 1200px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
 
 
 
