--- a/styles/style.css
+++ b/styles/style.css
@@ -400,6 +400,7 @@
     background: rgba(255, 255, 255, 0.80);
     backdrop-filter: blur(2.5px);
 }
+
 .section-3-container-2 {
     position: relative;
     translate: 50px -450px;
@@ -411,6 +412,7 @@
     background: rgba(255, 255, 255, 0.80);
     backdrop-filter: blur(2.5px);
 }
+
 .section-3-container-3 {
     position: relative;
     translate: 530px -450px;
@@ -449,22 +451,25 @@
     font-weight: 400;
     line-height: 26px;
 }
-.section3-2{
+
+.section3-2 {
     position: relative;
     translate: 0px -350px;
 }
-.section3-3{
+
+.section3-3 {
     position: relative;
     translate: 0px -700px;
 }
 
-.section-4{
+.section-4 {
     max-width: 1200px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
 }
-.section-4-button{
+
+.section-4-button {
     color: #FFF;
     width: 230px;
     height: 52px;
@@ -475,37 +480,43 @@
     text-align: center;
     font-weight: 800;
     font-size: 20px;
-   position: relative;
-   translate: 500px 0px;
-}
-.section-4-div-1{
-width: 570px;
-}
-.section-4-div-2{
-    width: 560px;
-}
-.section-4-div-1 h3{
-    color: #131318;
-font-size: 40px;
-font-weight: 800;
-margin-top: 0%;
-}
-.section-4-div-1 p{
-    width: 532px;
-    color: #5A5A5D;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px; /* 162.5% */
-}
-.section-4-div-1 li{
-    color: #131318;
-font-size: 16px;
-font-weight: 700;
-line-height: 26px;
-margin-bottom: 20px;
+    position: relative;
+    translate: 500px 0px;
 }
 
-.section-4-div-container{
+.section-4-div-1 {
+    max-width: 570px;
+}
+
+.section-4-div-2 {
+    width: 560px;
+}
+
+.section-4-div-1 h3 {
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    margin-top: 0%;
+}
+
+.section-4-div-1 p {
+    width: 532px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+
+.section-4-div-1 li {
+    color: #131318;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 26px;
+    margin-bottom: 20px;
+}
+
+.section-4-div-container {
     margin-top: 50px;
     display: flex;
     gap: 50px;
@@ -633,25 +644,41 @@ margin-bottom: 20px;
     .discount {
         margin-top: 20px;
     }
-   .group-39{
-    height: 550px;
-    width: 573px;
-   }
-   .group-40{
-    height: 550px;
-    width: 573px;
-   }
-   
-.section-3-container{
-    width: 500px;
-    translate: 35px -450px ;
-}
-.section-3-container-2{
-    width: 500px;
-    translate: 35px -450px ;
-}
-.section-3-container-3{
-    width: 500px;
-    translate: 35px -450px ;
-}
+
+    .group-39 {
+        height: 550px;
+        width: 573px;
+    }
+
+    .group-40 {
+        height: 550px;
+        width: 573px;
+    }
+
+    .section-3-container {
+        width: 500px;
+        translate: 35px -450px;
+    }
+
+    .section-3-container-2 {
+        width: 500px;
+        translate: 35px -450px;
+    }
+
+    .section-3-container-3 {
+        width: 500px;
+        translate: 35px -450px;
+    }
+
+    .section-3 {
+        max-height: 2000px
+    }
+
+    .section-4-button {
+        translate: 180px 0px;
+    }
+
+    .section-4-div-container {
+        flex-direction: column;
+    }
 }
